fix kanban on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -23,7 +23,7 @@
 
 html {
   height: 100%;
-  overflow-x: hidden;
+  overflow-x: clip;
 }
 
 body {
